# searchways

./: .dockerignore  .editorconfig  .env.example  .gitignore  4—29.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  HERMES.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WEEKLY_REPORT.md  WEEKLY_REPORT_SCRIPT.md  WEEKLY_REPORT_SLIDES.md  cli-config.yaml  docker-compose.yml  hermes-gateway-override.conf  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_amap.py  test_graph.py  test_user_scenarios.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-13_poi-search-plan.md
agent/: core.py  llm_client.py  models.py  user_profile.py
agent/multi_agent/: __init__.py  intent_agent.py  modifier_agent.py  narrator_agent.py  orchestrator.py  poi_strategy_agent.py  reviewer_agent.py  types.py
agent/tools/: __init__.py  geo.py  graph_planner.py  poi.py  poi_filter.py  reviews.py  routing.py
app/: auth.py  config.py  llm_client.py  models.py  user_profile.py
app/algorithms/: geo.py  graph_planner.py  poi_filter.py  reviews.py  routing.py
app/clustering/: attr_cluster.py  geo_cluster.py
app/core/: constraint_model.py  modifier_agent.py  narrator_agent.py  orchestrator.py  poi_strategy_agent.py  reviewer_agent.py  route_agent.py  types.py
db/: auth_schema.sql  cluster.py  connection.py  maintenance.py  repository.py  schema.sql  seed.py
deprecated/: intent_agent.py  route_pipeline.py
docs/: ARCHITECTURE.md  CONTEXT.md  architecture-flow.md  architecture-optimization-plan.md  architecture-refactor-plan.md  claude-code-modes.md  landing-optimization.md  optimization-plan.md  remaining-directions.md  solution-plan.md  test-report-v2.md  ux-report-friends.md  ux-report-v3.md  weekly-report-2026-05-09.md
scripts/: deploy.sh  enrich_pois.py  seed_mid_route_pois.py  seed_missing_categories.py
test/: test_amap.py  test_routing.py  test_ux_deep.py
tests/: patch_prompt.py  run_r1.py  run_round1_only.py  test_10users.py  test_10users_v2.py  test_10users_v3.py  test_4round_rolling.py  test_amap.py  test_benchmark.py  test_friends.py  test_graph.py  test_longcat.py  test_phase5_eval.py  test_routing.py  test_user_scenarios.py  test_ux_deep.py
web/: server.py
(+51 files in other folders)
