[project]
name = "searchways"
version = "0.3.0"
description = "现在就出发 — AI 本地路线智能规划（美团 AI 黑客松项目）"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mark Zheng", email = "zhengmark@users.noreply.github.com"},
]
keywords = ["route-planning", "ai", "llm", "poi", "map"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "B008",   # FastAPI Depends in defaults is idiomatic
    "N806",   # uppercase constants in functions are intentional
    "B904",   # raise...from in except blocks — nice-to-have, not critical
    "B905",   # zip() strict parameter — minor
    "C401",   # unnecessary generator — minor style preference
    "E501",   # line length — docstrings and test data often exceed 120
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E701", "F841"]  # test files: single-line conditionals OK, unused vars for debugging OK
"app/core/constraint_model.py" = ["E701"]  # intentional compact style

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
